feat:add elements for weather

--- a/website/index.html
+++ b/website/index.html
@@ -8,8 +8,19 @@
   </head>
   <body>
     <div id="container">
+      <div id="curcond">
+        <div class="cur"></div>
+      </div>
       <div id="clock"></div>
+      <div id="forecast">
+        <div class="forecast-item"><img class="forecast-img"></div>
+        <div class="forecast-item"><img class="forecast-img"></div>
+        <div class="forecast-item"><img class="forecast-img"></div>
+        <div class="forecast-item"><img class="forecast-img"></div>
+        <div class="forecast-item"><img class="forecast-img"></div>
+      </div>
     </div>
+    <button id="temp">test</button>
     
     <script src="index.js" type="module"></script>
   </body>
