feat:add weather info from api and style weather attributes

--- a/website/index.html
+++ b/website/index.html
@@ -8,20 +8,46 @@
   </head>
   <body>
     <div id="container">
-      <div id="curcond">
-        <div class="cur"></div>
+      <div id="current-cond" class="forecast-item">
+        <img class="forecast-img">
+        <div id="cur-temp" class="forecast-date"></div>
+        <div id="cur-sunrise" class="forecast-high"></div>
+        <div id="cur-sunset" class="forecast-low"></div>
       </div>
       <div id="clock"></div>
       <div id="forecast">
-        <div class="forecast-item"><img class="forecast-img"></div>
-        <div class="forecast-item"><img class="forecast-img"></div>
-        <div class="forecast-item"><img class="forecast-img"></div>
-        <div class="forecast-item"><img class="forecast-img"></div>
-        <div class="forecast-item"><img class="forecast-img"></div>
+        <div class="forecast-item">
+          <img class="forecast-img">
+          <div class="forecast-date"></div>
+          <div class="forecast-high"></div>
+          <div class="forecast-low"></div>
+        </div>
+        <div class="forecast-item">
+          <img class="forecast-img">
+          <div class="forecast-date"></div>
+          <div class="forecast-high"></div>
+          <div class="forecast-low"></div>
+        </div>
+        <div class="forecast-item">
+          <img class="forecast-img">
+          <div class="forecast-date"></div>
+          <div class="forecast-high"></div>
+          <div class="forecast-low"></div>
+        </div>
+        <div class="forecast-item">
+          <img class="forecast-img">
+          <div class="forecast-date"></div>
+          <div class="forecast-high"></div>
+          <div class="forecast-low"></div>
+        </div>
+        <div class="forecast-item">
+          <img class="forecast-img">
+          <div class="forecast-date"></div>
+          <div class="forecast-high"></div>
+          <div class="forecast-low"></div>
+        </div>
       </div>
     </div>
-    <button id="temp">test</button>
-    
     <script src="index.js" type="module"></script>
   </body>
 </html>
