feat:css tweaks and clock refreshes every 10 minutes

--- a/website/index.html
+++ b/website/index.html
@@ -9,9 +9,11 @@
   <body>
     <div id="container">
       <div id="current-cond" class="forecast-item">
-        <img class="forecast-img">
-        <div id="cur-temp" class="forecast-date"></div>
         <div id="cur-sunrise" class="forecast-high"></div>
+        <div>
+          <img class="forecast-img">
+          <div id="cur-temp" class="forecast-date"></div>
+        </div>
         <div id="cur-sunset" class="forecast-low"></div>
       </div>
       <div id="clock"></div>
