--- a/website/index.html
+++ b/website/index.html
@@ -50,6 +50,6 @@
         </div>
       </div>
     </div>
-    <script src="index.js" type="module"></script>
+    <script src="./index.js" type="module"></script>
   </body>
 </html>
